--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   --tag-lunch-bg: #0e1a13;     --tag-lunch-fg: #5ab88a;
   --tag-dinner-bg: #1a0e16;    --tag-dinner-fg: #c47ab8;
   --tag-snack-bg: #1a120e;     --tag-snack-fg: #e07a3a;
+  --tag-drink-bg: #0e1620;     --tag-drink-fg: #5ab0d8;
+  --tag-drink-bg: #0e1620;     --tag-drink-fg: #5ab0d8;
   --setup-grad: linear-gradient(135deg,#1e1c0e,#1a1811);
   --weight-grad: linear-gradient(135deg,#0e1a13,#0d1a16);
   --recalc-grad: linear-gradient(135deg,#1a130e,#1a100d);
@@ -52,6 +54,7 @@
   --tag-lunch-bg: #edfff5;     --tag-lunch-fg: #47b87a;
   --tag-dinner-bg: #f8eeff;    --tag-dinner-fg: #c4389e;
   --tag-snack-bg: #fff8ee;     --tag-snack-fg: #e07a3a;
+  --tag-drink-bg: #eef6ff;     --tag-drink-fg: #4a90d9;
   --setup-grad: linear-gradient(135deg,#fff0f3,#fce9ee);
   --weight-grad: linear-gradient(135deg,#edfff5,#e8fff2);
   --recalc-grad: linear-gradient(135deg,#fff8ee,#fff3e8);
@@ -75,6 +78,7 @@
   --tag-lunch-bg: #edfff5;     --tag-lunch-fg: #5ab88a;
   --tag-dinner-bg: #f0ebff;    --tag-dinner-fg: #9b6fe8;
   --tag-snack-bg: #fff8ee;     --tag-snack-fg: #e07a3a;
+  --tag-drink-bg: #eef6ff;     --tag-drink-fg: #4a90d9;
   --setup-grad: linear-gradient(135deg,#f0ebff,#ede8ff);
   --weight-grad: linear-gradient(135deg,#edfff5,#e8fff2);
   --recalc-grad: linear-gradient(135deg,#fff8ee,#fff3e8);
@@ -98,6 +102,7 @@
   --tag-lunch-bg: #edfff5;     --tag-lunch-fg: #47b87a;
   --tag-dinner-bg: #fff0f5;    --tag-dinner-fg: #e84778;
   --tag-snack-bg: #fffae8;     --tag-snack-fg: #c49a00;
+  --tag-drink-bg: #eef6ff;     --tag-drink-fg: #4a90d9;
   --setup-grad: linear-gradient(135deg,#fff5f0,#fdeee5);
   --weight-grad: linear-gradient(135deg,#edfff5,#e8fff2);
   --recalc-grad: linear-gradient(135deg,#fff5f0,#fdeee0);
@@ -122,6 +127,7 @@
   --tag-lunch-bg: #eaf5ea;     --tag-lunch-fg: #4a7a4a;
   --tag-dinner-bg: #f0eaf5;    --tag-dinner-fg: #6a4a8a;
   --tag-snack-bg: #f5eee0;     --tag-snack-fg: #8a5a1a;
+  --tag-drink-bg: #e8f0f8;     --tag-drink-fg: #4a7aaa;
   --setup-grad: linear-gradient(135deg,#f0ede8,#eeece9);
   --weight-grad: linear-gradient(135deg,#eaf5ea,#e4f0e4);
   --recalc-grad: linear-gradient(135deg,#f5eee0,#f5ead0);
@@ -145,6 +151,7 @@
   --tag-lunch-bg: #1e3030;     --tag-lunch-fg: #5ab88a;
   --tag-dinner-bg: #2a2040;    --tag-dinner-fg: #9880d8;
   --tag-snack-bg: #302a1e;     --tag-snack-fg: #e8a830;
+  --tag-drink-bg: #0e1828;     --tag-drink-fg: #4a90d8;
   --setup-grad: linear-gradient(135deg,#22303a,#1e2a34);
   --weight-grad: linear-gradient(135deg,#1e3028,#1a2e24);
   --recalc-grad: linear-gradient(135deg,#302818,#2a2010);
@@ -168,6 +175,7 @@
   --tag-lunch-bg: #e8f5e8;     --tag-lunch-fg: #4a7a50;
   --tag-dinner-bg: #f0e8f5;    --tag-dinner-fg: #7a5a8a;
   --tag-snack-bg: #f8ede0;     --tag-snack-fg: #c07850;
+  --tag-drink-bg: #e8f0f8;     --tag-drink-fg: #4a7aaa;
   --setup-grad: linear-gradient(135deg,#f5f0e0,#f2ede0);
   --weight-grad: linear-gradient(135deg,#e8f5e8,#e0f0e0);
   --recalc-grad: linear-gradient(135deg,#f8ede0,#f5e4d0);
@@ -192,6 +200,7 @@
   --tag-lunch-bg: #1a2010;     --tag-lunch-fg: #80d440;
   --tag-dinner-bg: #1a1030;    --tag-dinner-fg: #8080ff;
   --tag-snack-bg: #201808;     --tag-snack-fg: #ff6b35;
+  --tag-drink-bg: #081820;     --tag-drink-fg: #30c0e8;
   --setup-grad: linear-gradient(135deg,#0e2020,#0a1818);
   --weight-grad: linear-gradient(135deg,#0e2018,#0a1814);
   --recalc-grad: linear-gradient(135deg,#201808,#1a1004);
@@ -215,6 +224,7 @@
   --tag-lunch-bg: #0e1e14;     --tag-lunch-fg: #47c87a;
   --tag-dinner-bg: #0e1030;    --tag-dinner-fg: #4a9fe8;
   --tag-snack-bg: #1e1410;     --tag-snack-fg: #e87a47;
+  --tag-drink-bg: #0a1828;     --tag-drink-fg: #4a9fe8;
   --setup-grad: linear-gradient(135deg,#1a1e10,#141a0a);
   --weight-grad: linear-gradient(135deg,#0e1e14,#0a1810);
   --recalc-grad: linear-gradient(135deg,#1e1410,#18100a);
@@ -238,6 +248,7 @@
   --tag-lunch-bg: #102a14;     --tag-lunch-fg: #40c080;
   --tag-dinner-bg: #1a1010;    --tag-dinner-fg: #e84040;
   --tag-snack-bg: #201a10;     --tag-snack-fg: #c8a040;
+  --tag-drink-bg: #101820;     --tag-drink-fg: #6080c0;
   --setup-grad: linear-gradient(135deg,#2a2010,#221a08);
   --weight-grad: linear-gradient(135deg,#102a14,#0a2010);
   --recalc-grad: linear-gradient(135deg,#201a10,#1a1408);
@@ -366,6 +377,7 @@ body {
 .entry-tag.Lunch     { background: var(--tag-lunch-bg);     color: var(--tag-lunch-fg); }
 .entry-tag.Dinner    { background: var(--tag-dinner-bg);    color: var(--tag-dinner-fg); }
 .entry-tag.Snack     { background: var(--tag-snack-bg);     color: var(--tag-snack-fg); }
+.entry-tag.Drink     { background: var(--tag-drink-bg);     color: var(--tag-drink-fg); }
 .entry-cals { font-family: var(--font-display); font-size: 20px; color: var(--accent); flex-shrink: 0; }
 .entry-delete {
   background: none; border: none; color: var(--muted);
@@ -526,6 +538,29 @@ select.form-input {
   content: ''; flex: 1; height: 1px; background: var(--border);
 }
 
+/* ---- PROTEIN BAR ---- */
+.protein-section {
+  padding: 0 24px 4px;
+  display: none;
+}
+.protein-section.visible { display: block; }
+.protein-header {
+  display: flex; justify-content: space-between; align-items: center;
+  margin-bottom: 8px;
+}
+.protein-label { font-size: 12px; text-transform: uppercase; letter-spacing: 0.1em; color: var(--muted); font-weight: 600; }
+.protein-nums { font-size: 13px; font-weight: 600; }
+.protein-nums span { color: var(--accent); }
+.protein-track {
+  height: 10px; background: var(--surface2); border-radius: 20px; overflow: hidden;
+}
+.protein-fill {
+  height: 100%; background: var(--good); border-radius: 20px;
+  transition: width 0.5s cubic-bezier(.4,0,.2,1);
+  min-width: 0; max-width: 100%;
+}
+.protein-fill.over { background: var(--accent); }
+
 /* ---- GOAL TOGGLE ---- */
 .goal-toggle { display: flex; gap: 10px; }
 .goal-toggle-btn {
@@ -582,13 +617,13 @@ select.form-input {
     </svg>
     <div class="ring-center">
       <div class="ring-remaining" id="remainingCals">—</div>
-      <div class="ring-label">remaining</div>
+      <div class="ring-label" id="ringCenterLabel">remaining</div>
     </div>
   </div>
   <div class="cal-stats">
     <div class="stat">
       <div class="stat-val" id="goalDisplay">—</div>
-      <div class="stat-lbl">Goal</div>
+      <div class="stat-lbl" id="goalStatLbl">Remaining</div>
     </div>
     <div class="stat">
       <div class="stat-val" id="consumedDisplay">0</div>
@@ -598,6 +633,17 @@ select.form-input {
       <div class="stat-val" id="mealsDisplay">0</div>
       <div class="stat-lbl">Items</div>
     </div>
+  </div>
+</div>
+
+<!-- PROTEIN BAR -->
+<div class="protein-section" id="proteinSection">
+  <div class="protein-header">
+    <span class="protein-label">🥩 Protein</span>
+    <span class="protein-nums"><span id="proteinConsumed">0</span>g / <span id="proteinGoalDisplay">—</span>g</span>
+  </div>
+  <div class="protein-track">
+    <div class="protein-fill" id="proteinFill" style="width:0%"></div>
   </div>
 </div>
 
@@ -614,13 +660,13 @@ select.form-input {
   <div class="section-header">
     <span class="section-title">Today's Log</span>
     <button class="add-btn" onclick="openAddModal()">
-      <span style="font-size:18px; line-height:1;">+</span> Add Food
+      <span style="font-size:18px; line-height:1;">+</span> Add Fuel
     </button>
   </div>
   <div class="entries-list" id="entriesList">
     <div class="empty-state" id="emptyState">
       <div class="empty-icon">🍽️</div>
-      <p>No meals logged yet.<br>Tap "Add Food" to get started.</p>
+      <p>No meals logged yet.<br>Tap "Add Fuel" to get started.</p>
     </div>
   </div>
 </div>
@@ -656,7 +702,12 @@ select.form-input {
         <option value="Lunch" selected>☀️ Lunch</option>
         <option value="Dinner">🌙 Dinner</option>
         <option value="Snack">🍎 Snack</option>
+        <option value="Drink">🥤 Drink</option>
       </select>
+    </div>
+    <div class="form-group" id="proteinEntryGroup" style="display:none;">
+      <label class="form-label">Protein (g) <span style="color:var(--muted);font-weight:400;text-transform:none;letter-spacing:0;">optional</span></label>
+      <input type="number" id="foodProtein" class="form-input" placeholder="e.g. 30" min="0" max="500">
     </div>
     <div class="form-group">
       <label class="form-label">Photo (optional)</label>
@@ -714,6 +765,28 @@ select.form-input {
       <input type="number" id="weightInput" class="form-input" placeholder="e.g. 175" min="50" max="600" step="0.1">
       <div id="weightHint" style="font-size:12px; color:var(--muted); margin-top:8px;">
         Log weekly — after 4 weeks or 5 lbs gained, you'll get a reminder to recalculate your calories.
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="form-label">Track Protein?</label>
+      <div class="goal-toggle">
+        <button class="goal-toggle-btn" id="btnProteinYes" onclick="setProteinTracking(true)">
+          <span class="toggle-icon">💪</span>
+          Yes, track it
+        </button>
+        <button class="goal-toggle-btn" id="btnProteinNo" onclick="setProteinTracking(false)">
+          <span class="toggle-icon">✖️</span>
+          No thanks
+        </button>
+      </div>
+    </div>
+
+    <div class="form-group" id="proteinGoalGroup" style="display:none;">
+      <label class="form-label">Daily Protein Goal (g)</label>
+      <input type="number" id="proteinGoalInput" class="form-input" placeholder="e.g. 150" min="10" max="500">
+      <div style="font-size:12px; color:var(--muted); margin-top:8px;">
+        A common target is 0.7–1g per lb of bodyweight.
       </div>
     </div>
 
@@ -788,7 +861,7 @@ function ss(k, v) { try { localStorage.setItem(k, JSON.stringify(v)); } catch {}
 // ============================
 // STATE
 // ============================
-let settings         = gs('fuel_settings', { goal: 0, startWeight: 0, currentWeight: 0, settingsDate: null, goalType: 'loss' });
+let settings         = gs('fuel_settings', { goal: 0, startWeight: 0, currentWeight: 0, settingsDate: null, goalType: 'loss', trackProtein: false, proteinGoal: 0 });
 let allDays          = gs('fuel_days', {});
 let weightLog        = gs('fuel_weights', []);
 let lastWeightPrompt = gs('fuel_last_weight_prompt', null);
@@ -859,28 +932,63 @@ function renderHeader() {
 // RING
 // ============================
 function renderRing() {
-  const today = allDays[tk];
+  const today    = allDays[tk];
   const goal     = settings.goal || 0;
   const consumed = today.entries.reduce((s, e) => s + e.cals, 0);
   const remaining = goal - consumed;
+  const isLoss   = (settings.goalType || 'loss') === 'loss';
 
-  document.getElementById('goalDisplay').textContent     = goal || '—';
+  // Bottom stat label: "Remaining" for loss, "Goal" for gain
+  document.getElementById('goalStatLbl').textContent = isLoss ? 'Remaining' : 'Goal';
+  document.getElementById('goalDisplay').textContent  = isLoss ? (goal ? remaining : '—') : (goal || '—');
+
   document.getElementById('consumedDisplay').textContent = consumed;
-  document.getElementById('remainingCals').textContent   = remaining;
   document.getElementById('mealsDisplay').textContent    = today.entries.length;
+
+  // Ring center: always show remaining for loss, consumed for gain
+  const ringNum = isLoss ? remaining : consumed;
+  document.getElementById('remainingCals').textContent   = goal ? ringNum : '—';
+  document.getElementById('ringCenterLabel').textContent = isLoss ? 'remaining' : 'consumed';
 
   const ring = document.getElementById('ringFill');
   const circ = 477.5;
   if (goal > 0) {
     const pct = Math.min(consumed / goal, 1);
     ring.style.strokeDashoffset = circ - circ * pct;
-    ring.style.stroke = pct >= 1 ? 'var(--danger)' : pct > 0.85 ? 'var(--accent2)' : 'var(--accent)';
-    document.getElementById('remainingCals').style.color = remaining < 0 ? 'var(--danger)' : 'var(--text)';
+    if (isLoss) {
+      ring.style.stroke = pct >= 1 ? 'var(--danger)' : pct > 0.85 ? 'var(--accent2)' : 'var(--accent)';
+      document.getElementById('remainingCals').style.color = remaining < 0 ? 'var(--danger)' : 'var(--text)';
+    } else {
+      ring.style.stroke = pct >= 1 ? 'var(--good)' : 'var(--accent)';
+      document.getElementById('remainingCals').style.color = 'var(--text)';
+    }
   } else {
     ring.style.strokeDashoffset = circ;
     ring.style.stroke = 'var(--accent)';
   }
   document.getElementById('setupBanner').classList.toggle('hidden', goal > 0);
+}
+
+// ============================
+// PROTEIN BAR
+// ============================
+function renderProtein() {
+  const section = document.getElementById('proteinSection');
+  const trackProtein = settings.trackProtein && settings.proteinGoal > 0;
+  section.classList.toggle('visible', trackProtein);
+  // Also show/hide protein entry field in add modal
+  document.getElementById('proteinEntryGroup').style.display = trackProtein ? 'block' : 'none';
+  if (!trackProtein) return;
+
+  const consumed = allDays[tk].entries.reduce((s, e) => s + (e.protein || 0), 0);
+  const goal     = settings.proteinGoal;
+  const pct      = goal > 0 ? Math.min(consumed / goal * 100, 100) : 0;
+
+  document.getElementById('proteinConsumed').textContent   = consumed;
+  document.getElementById('proteinGoalDisplay').textContent = goal;
+  const fill = document.getElementById('proteinFill');
+  fill.style.width = pct + '%';
+  fill.classList.toggle('over', consumed >= goal);
 }
 
 // ============================
@@ -918,7 +1026,7 @@ function renderWeekChart() {
 // ============================
 // ENTRIES
 // ============================
-const MEAL_EMOJI = { Breakfast:'🌅', Lunch:'☀️', Dinner:'🌙', Snack:'🍎' };
+const MEAL_EMOJI = { Breakfast:'🌅', Lunch:'☀️', Dinner:'🌙', Snack:'🍎', Drink:'🥤' };
 
 function renderEntries() {
   const list = document.getElementById('entriesList');
@@ -959,6 +1067,7 @@ function saveNote() { allDays[tk].note = document.getElementById('dailyNote').va
 function openAddModal() {
   document.getElementById('foodName').value = '';
   document.getElementById('foodCals').value = '';
+  document.getElementById('foodProtein').value = '';
   document.getElementById('photoPreview').classList.add('hidden');
   document.getElementById('photoPlaceholder').classList.remove('hidden');
   photoDataUrl = null;
@@ -984,10 +1093,11 @@ function saveEntry() {
   const name     = document.getElementById('foodName').value.trim();
   const cals     = parseInt(document.getElementById('foodCals').value);
   const mealType = document.getElementById('mealType').value;
+  const protein  = parseInt(document.getElementById('foodProtein').value) || 0;
   if (!name)          { alert('Please enter a food name.'); return; }
   if (!cals || cals<0){ alert('Please enter valid calories.'); return; }
   const time = new Date().toLocaleTimeString([], { hour:'2-digit', minute:'2-digit' });
-  allDays[tk].entries.push({ name, cals, mealType, time, photo: photoDataUrl || null });
+  allDays[tk].entries.push({ name, cals, protein, mealType, time, photo: photoDataUrl || null });
   ss('fuel_days', allDays);
   closeAddModal();
   renderAll();
@@ -1014,12 +1124,24 @@ function setGoalType(type) {
 }
 
 // ============================
+// PROTEIN TRACKING
+// ============================
+function setProteinTracking(val) {
+  settings.trackProtein = val;
+  document.getElementById('btnProteinYes').classList.toggle('active', val);
+  document.getElementById('btnProteinNo').classList.toggle('active', !val);
+  document.getElementById('proteinGoalGroup').style.display = val ? 'block' : 'none';
+}
+
+// ============================
 // SETTINGS MODAL
 // ============================
 function openSettings() {
   document.getElementById('goalInput').value   = settings.goal || '';
   document.getElementById('weightInput').value = settings.currentWeight || '';
+  document.getElementById('proteinGoalInput').value = settings.proteinGoal || '';
   setGoalType(settings.goalType || 'loss');
+  setProteinTracking(settings.trackProtein || false);
   // refresh active swatches
   document.querySelectorAll('.theme-swatch').forEach(s => {
     s.classList.toggle('active', s.dataset.themeId === currentTheme);
@@ -1029,15 +1151,14 @@ function openSettings() {
 function closeSettings() { document.getElementById('settingsModal').classList.remove('open'); }
 
 function saveSettings() {
-  const goal   = parseInt(document.getElementById('goalInput').value);
-  const weight = parseFloat(document.getElementById('weightInput').value);
+  const goal         = parseInt(document.getElementById('goalInput').value);
+  const weight       = parseFloat(document.getElementById('weightInput').value);
+  const proteinGoal  = parseInt(document.getElementById('proteinGoalInput').value);
 
-  // Only update goal if user typed something valid
-  if (goal && goal > 0) {
-    settings.goal = goal;
-  }
-  // Apply the saved goal to today's entry always
+  if (goal && goal > 0) settings.goal = goal;
   allDays[tk].goal = settings.goal || 0;
+
+  if (proteinGoal && proteinGoal > 0) settings.proteinGoal = proteinGoal;
 
   if (weight && weight > 0) {
     if (!settings.startWeight) settings.startWeight = weight;
@@ -1151,6 +1272,7 @@ document.querySelectorAll('.modal-backdrop').forEach(bd => {
 function renderAll() {
   renderHeader();
   renderRing();
+  renderProtein();
   renderWeekChart();
   renderEntries();
   renderNote();
@@ -1160,6 +1282,7 @@ function renderAll() {
 buildThemeSwatches();
 applyTheme(currentTheme);
 setGoalType(settings.goalType || 'loss');
+setProteinTracking(settings.trackProtein || false);
 renderAll();
 </script>
 </body>
